Created ray emitter & line trace collision

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <script src="public/scripts/script.js"></script>
     <script src="public/scripts/ray.js"></script>
+    <script src="public/scripts/emitter.js"></script>
     <script src="public/scripts/boundary.js"></script>
     <script src="public/scripts/sketch.js"></script>
   </body>
