Added circular boundaries & restructured files

--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Ray Casting</title>
-
-    <link rel="stylesheet" type="text/css" href="/public/styles/style.css">
-
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
+    <title>Ray Casting Algorithms</title>
   </head>
-
   <body>
-    <script src="public/scripts/script.js"></script>
-    <script src="public/scripts/ray.js"></script>
-    <script src="public/scripts/emitter.js"></script>
-    <script src="public/scripts/boundary.js"></script>
-    <script src="public/scripts/sketch.js"></script>
+    <div class="main-menu">
+      <h1>Ray Casting Algorithms</h1>
+      <ul>
+        <li><a href="./raycasting.html">Simple 2D Ray Casting</a></li>
+      </ul>
+    </div>
   </body>
 </html>
