--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1>Ray Casting Algorithms</h1>
       <ul>
         <li><a href="./raycasting.html">Simple 2D Ray Casting</a></li>
+        <li><a href="./raymarching.html">2D Ray Marching Visualization</a></li>
       </ul>
     </div>
   </body>
